# galapagos

./: .gitignore  .gitignore.orig  Cargo.toml  LICENSE  README.md  ROADMAP.md  pixi.toml  pyproject.toml
examples/: deriva.py  gene_cost_variation.py  gene_cost_variation_out.txt  gene_cost_variation_out_I.txt  mutation_chance_out.txt  mutation_variation.py  population_size_variation.py  population_size_variation_out.txt  population_size_variation_out_Queiroz.txt  presentation_bio.py  presentation_bio_II.py  selecao.py  simulate_HW.py  simulate_class.py  simulate_drift.py  simulate_selection.py  test.txt  test_genome_complexity.py  test_rust_binding.py
galapagos/: generation.py  genotype.py  individual.py
notebooks/: population_evolution.ipynb
src/: .__init__.py.swp  .generation.py.swp  .genotype.py.swp  .individual.py.swp  .locus.py.swp  .objects.py.swp  .simulation.py.swp  .utils.py.swp  generation.py  generation.rs  genotype.py  genotype.rs  individual.py  individual.rs  lib.rs  locus.py  locus.rs  utils.py  utils.rs
src/galapagos/: genepool.py  generation.py  genotype.py  individual.py  locus.py  simulation.py  utils.py
tests/: .deriva.py.swp  .generation_test.py.swp  generation_test.py  genotype_essential.py  individual_mateI.py  individual_mate_mutation.py  simulate_HW.py  simulate_drift.py  simulate_selection.py  simulate_simple_test.py  test_locus.py  test_rust_binding.py
