[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "galapagos_evo"
version = "0.2.1"
authors = [
  { name="Luan Leal", email="luanleal@usp.br" },
  { name="Micael Baruch", email="micael.mbaruch@usp.br"}
]
description = "A small didatic package for evolution simulations"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/thefire888/galapagos"
Issues = "https://github.com/thefire888/galapagos/issues"

[tool.setuptools]
packages = ["galapagos"]

